--- a/js/src/ui/Handlebars/templates/authpage.hbs
+++ b/js/src/ui/Handlebars/templates/authpage.hbs
@@ -1,10 +1,16 @@
 <form id='login'>
-    <h1>Connect to {{network}} IRC</h1>
-    <div class='nick right'><span>Nickname:</span><input type='text' name='basic' id='nickname' value={{nickname}} /></div>
-    <div class='username right {{#unless full}}hidden{{/unless}}'><span>Gamesurge username:</span><input type='text' name='full' id='username' value='{{username}}'></div>
-    <div class='password right {{#unless full}}hidden{{/unless}}'><span>Password:</span><input type='password' name='full' id='password' value='{{password}}'></div>
+    <h2>Connect to {{network}} IRC</h2>
+    <div class='nick right'>
+        <label class="control-label" for="nickname">Nickname:<input type='text' name='basic' id='nickname' value={{nickname}} /></label>
+    </div>
+    <div class='username right {{#unless full}}hidden{{/unless}}'>
+        <label class="control-label" for="username">Gamesurge username:<input type='text' name='full' id='username' value='{{username}}'></label>
+    </div>
+    <div class='password right {{#unless full}}hidden{{/unless}}'>
+        <label class="control-label" for="password">Password:<input type='password' name='full' id='password' value='{{password}}'></label>
+    </div>
     <div class='authenticate'>
-        <span>Authenticate (optional)</span><input type='checkbox' id='authenticate' {{check full}}>
+        <label for='authenticate'>Authenticate (optional)<input type='checkbox' id='authenticate' {{check full}}></label for='authenticate'>
     </div>
     <div><input type='submit' value='Connect' /></div>
 </form>
