Updated options and added irc style matcher
Updated:
-core with some extra force perserved properties
-nativemods bug fix

--- a/css/qwebirc.css
+++ b/css/qwebirc.css
@@ -544,3 +544,8 @@ div.qwebirc-embeddedwizard {
 .mgfx-content > div {
     position: absolute;
 }
+
+#options .actions {
+    position: absolute;
+    margin-top: 30px;
+}
