--- a/js/src/ui/Handlebars/templates/options.hbs
+++ b/js/src/ui/Handlebars/templates/options.hbs
@@ -87,4 +87,8 @@
 
         </div>
     </div>
+    <div class="actions">
+        <button type="submit" class="btn btn-small btn-primary" value="save">Save Changes</button>
+        <button type="reset" class="btn btn-small btn-warning" value="reset">Revert</button>
+    </div>
 </form>
