Fixed options and client auth (maybe?)
Also deleted my least favourite snippets. good bye forever ui.urlificate
and ui.colourise and good riddances

--- a/js/src/ui/Handlebars/templates/authpage.hbs
+++ b/js/src/ui/Handlebars/templates/authpage.hbs
@@ -12,6 +12,6 @@
     <div class='authenticate'>
         <label for='authenticate'>Authenticate (optional)<input type='checkbox' id='authenticate' {{check full}}></label for='authenticate'>
     </div>
-    <div><input type='submit' value='Connect' /></div>
+    <div><input type='submit' value='Connect' class="btn btn-primary btn-small" /></div>
 </form>
 <div class='qwebirc-init-channels'><span>{{channels}}</span></div>
