--- a/js/src/ui/Handlebars/templates/options.hbs
+++ b/js/src/ui/Handlebars/templates/options.hbs
@@ -64,6 +64,12 @@
                 </label>
             </div>
             <div class="controls">
+                <label class="checkbox" for="font_size">
+                    {{lang.FONT_SIZE}}
+                    <input type="number" id="font_size" value={{font_size}}>
+                </label>
+            </div>
+            <div class="controls">
                 <label for="style_hue">
                     {{lang.STYLE_HUE}}
                     <div id="style_hue" class="slider hue-slider"><div class="knob"></div></div>
