Helper and url optimizations

--- a/js/src/ui/Handlebars/templates/options.hbs
+++ b/js/src/ui/Handlebars/templates/options.hbs
@@ -122,6 +122,9 @@
                     </label>
                 </label>
             </div>
+            <div id="custom-notices" class="controls">
+                
+            </div>
         </div>
         <div class="hotkeys control-group well">
             
