--- a/js/src/ui/Handlebars/templates/ircInput.hbs
+++ b/js/src/ui/Handlebars/templates/ircInput.hbs
@@ -1,9 +1,15 @@
 <form class='input'>
-    <div class="input-group">
+    <div class='input-group'>
         <span class='input-group-addon nickname'><span class='status {{status}}'></span>{{nick}}</span>
         <input class='{{type}} input-field form-control' type='text'>
-        <span class="input-group-btn">
-            <button class="btn btn-default send" type="button">&gt;</button>
+        <span class='input-group-btn'>
+            <button class='btn btn-default send' type='button'>&gt;</button>
         </span>
+        <ul class='dropdown-menu'>
+            <li><a href='#'>Colours</a></li>
+            <li><a href='#'>Styles</a></li>
+            <li><a href='#'>IRC Commands</a></li>
+            <li><a href='#'>Actions</a></li>
+        </ul>
     </div>
 </form>
