--- a/demo/static/css/qwebirc.css
+++ b/demo/static/css/qwebirc.css
@@ -529,7 +529,7 @@ div.qwebirc-embeddedwizard {
     padding: 25px 50px;
 }*/
 
-
+/*
 .mgfx-content > div {
     position: absolute;
 }
@@ -537,7 +537,7 @@ div.qwebirc-embeddedwizard {
 #options .actions {
     position: absolute;
     margin-top: 10px;
-}
+}*/
 
 
 #options {
