--- a/js/src/ui/Handlebars/templates/customNotice.hbs
+++ b/js/src/ui/Handlebars/templates/customNotice.hbs
@@ -1,11 +1,18 @@
-<div class="controls">
-    <label class="control-inline">{{lang.CUSTOM_NOTICE}}
-        <input type="text" class="custom-notice" placehold="{{lang.NOTICE_PLACEHOLDER}}" value="{{text}}">
+<div class="controls custom-notice" id={{id}}>
+    <label class="control-inline">{{lang.USER_NOTICE}}
+        <input type="text" data-id="nick" placeholder="{{lang.NICK_PLACEHOLDER}}" value="{{nick}}">
     </label>
-    <label class="checkbox-inline" for="notify_on_pm.beep">{{lang.BEEP}}
-        <input type="checkbox" id="notify_on_pm.beep" {{check notify_on_pm.beep}}>
+    <label class="control-inline">{{lang.MESSAGE_NOTICE}}
+        <input type="text" data-id="msg" placeholder="{{lang.MESSAGE_PLACEHOLDER}}" value="{{msg}}">
     </label>
-    <label class="checkbox-inline" for="notify_on_pm.flash">{{lang.FLASH}}
-        <input type="checkbox" id="notify_on_pm.flash" {{check notify_on_pm.flash}}>
+    <label class="checkbox-inline" >{{lang.BEEP}}
+        <input type="checkbox" data-id="beep" {{check beep}}>
     </label>
+    <label class="checkbox-inline">{{lang.FLASH}}
+        <input type="checkbox" data-id="flash" {{check flash}}>
+    </label>
+    <label class="checkbox-inline" title="{{lang.ESCAPE_HINT}}">{{lang.AUTOESCAPE}}
+        <input type="checkbox" data-id="autoescape" {{check autoescape}}>
+    </label>
+    <input type="button" value="{{lang.DELETE_NOTICE}}" class="remove-notice btn btn-danger btn-smaller">
 </div>
