--- a/js/src/ui/Handlebars/templates/options.hbs
+++ b/js/src/ui/Handlebars/templates/options.hbs
@@ -1,14 +1,13 @@
+{{!TODO: make Coloumns}}
 <form id="options" class="form-horizontal">
-    <div class="">
-        <ul class="option-tabs nav nav-tabs">
-            <li class="ui-options"><a href="#">Interface</a></li>
-            <li class="irc-options"><a href="#">Chat Preferences</a></li>
-            <li class="alert-options disabled"><a href="#">Notifications(TODO)</a></li>
-            <li class="hotkeys disabled"><a href="#">Hot Keys(TODO)</a></li>
-        </ul>
-    </div>
-    <div class="tab-content">
-        <div class="ui-options control-group well">
+    <ul class="option-tabs tabs nav nav-tabs" data-behavior="BS.Tabs">
+        <li class="ui-options"><a href="#">Interface</a></li>
+        <li class="irc-options"><a href="#">Chat Preferences</a></li>
+        <li class="alert-options"><a href="#">Notifications</a></li>
+        <li class="hotkeys disabled"><a href="#">Hot Keys(TODO)</a></li>
+    </ul>
+    <div class="tab-content" id="my-tab-content">
+        <div class="ui-options control-group well active">
             <div class="controls">
                 <label class="checkbox" for="nick_colours">
                     {{lang.NICK_COLOURS}}
@@ -92,39 +91,43 @@
             </div>
         </div>
         <div class="alert-options control-group well">
-            <div class="controls">
-                <label class="control-label">{{lang.NOTIFY_ON_MENTION}}
-                    <label class="checkbox-inline" for="notify_on_mention.beep">{{lang.BEEP}}
-                        <input type="checkbox" id="notify_on_mention.beep" {{check notify_on_mention.beep}}>
+            <div id="standard-notices">
+                <div class="controls">
+                    <label class="control-label">{{lang.NOTIFY_ON_MENTION}}
+                        <label class="checkbox-inline" for="on_mention.beep">{{lang.BEEP}}
+                            <input type="checkbox" id="on_mention.beep" {{check notices.on_mention.beep}}>
+                        </label>
+                        <label class="checkbox-inline" for="on_mention.flash">{{lang.FLASH}}
+                            <input type="checkbox" id="on_mention.flash" {{check notices.on_mention.flash}}>
+                        </label>
                     </label>
-                    <label class="checkbox-inline" for="notify_on_mention.flash">{{lang.FLASH}}
-                        <input type="checkbox" id="notify_on_mention.flash" {{check notify_on_mention.flash}}>
+                </div>
+                <div class="controls">
+                    <label class="control-label">{{lang.NOTIFY_ON_PM}}
+                        <label class="checkbox-inline" for="on_pm.beep">{{lang.BEEP}}
+                            <input type="checkbox" id="on_pm.beep" {{check notices.on_pm.beep}}>
+                        </label>
+                        <label class="checkbox-inline" for="on_pm.flash">{{lang.FLASH}}
+                            <input type="checkbox" id="on_pm.flash" {{check notices.on_pm.flash}}>
+                        </label>
                     </label>
-                </label>
+                </div>
+                <div class="controls">
+                    <label class="control-label">{{lang.NOTIFY_ON_NOTICE}}
+                        <label class="checkbox-inline" for="on_notice.beep">{{lang.BEEP}}
+                            <input type="checkbox" id="on_notice.beep" {{check notices.on_notice.beep}}>
+                        </label>
+                        <label class="checkbox-inline" for="on_notice.flash">{{lang.FLASH}}
+                            <input type="checkbox" id="on_notice.flash" {{check notices.on_notice.flash}}>
+                        </label>
+                    </label>
+                </div>
             </div>
-            <div class="controls">
-                <label class="control-label">{{lang.NOTIFY_ON_PM}}
-                    <label class="checkbox-inline" for="notify_on_pm.beep">{{lang.BEEP}}
-                        <input type="checkbox" id="notify_on_pm.beep" {{check notify_on_pm.beep}}>
-                    </label>
-                    <label class="checkbox-inline" for="notify_on_pm.flash">{{lang.FLASH}}
-                        <input type="checkbox" id="notify_on_pm.flash" {{check notify_on_pm.flash}}>
-                    </label>
-                </label>
-            </div>
-            <div class="controls">
-                <label class="control-label">{{lang.NOTIFY_ON_NOTICE}}
-                    <label class="checkbox-inline" for="notify_on_notice.beep">{{lang.BEEP}}
-                        <input type="checkbox" id="notify_on_notice.beep" {{check notify_on_notice.beep}}>
-                    </label>
-                    <label class="checkbox-inline" for="notify_on_notice.flash">{{lang.FLASH}}
-                        <input type="checkbox" id="notify_on_notice.flash" {{check notify_on_notice.flash}}>
-                    </label>
-                </label>
-            </div>
+            <h3>Custom Notices</h3>
             <div id="custom-notices" class="controls">
                 
             </div>
+            <input type="button" value="{{lang.ADD_NOTICE}}" id="add-notice" class="btn btn-default btn-small">
         </div>
         <div class="hotkeys control-group well">
             
