Interface client decoupling + new desktop notices

--- a/js/src/ui/Handlebars/templates/customNotice.hbs
+++ b/js/src/ui/Handlebars/templates/customNotice.hbs
@@ -11,6 +11,12 @@
     <label class="checkbox-inline">{{lang.FLASH}}
         <input type="checkbox" data-id="flash" {{check flash}}>
     </label>
+    <!-- <label class="checkbox-inline">{{lang.HIGHLIGHT}}
+        <input type="checkbox" data-id="highlight" {{check highlight}}>
+    </label>
+    <label class="checkbox-inline">{{lang.MENTIONED}}
+        <input type="checkbox" data-id="mentioned" {{check mentioned}}>
+    </label> -->
     <label class="checkbox-inline" title="{{lang.ESCAPE_HINT}}">{{lang.AUTOESCAPE}}
         <input type="checkbox" data-id="autoescape" {{check autoescape}}>
     </label>
