--- a/demo/static/css/qwebirc.css
+++ b/demo/static/css/qwebirc.css
@@ -304,7 +304,7 @@ html, body {
     background-color: #9090ff;
 }
 
-.channotice, .privnotice {
+.chan-notice, .priv-notice {
     background-color: yellow !important;
     font-weight: bold;
 }
