Bunch of Maintenance: see description
In the order of what I remember

Moved windows to an Epitome.View*** many changes (delegation, element
storing, rendering etc [reduced memory consumed])
Fixed Drag.SplitPane
Updated mootools version from 1.4.5 to 1.4.5-no-compat
Changed libs
New templates
New options
More descriptive method names
Fixed whois listener
Fixed Epitome.Events bug #12
More command ui decoupling (almost there)

--- a/js/src/ui/Handlebars/templates/nickbtn.hbs
+++ b/js/src/ui/Handlebars/templates/nickbtn.hbs
@@ -1,1 +1,1 @@
-<a href='#' class='user'><span>{{nick}}</span></a>
+<div class='user'><span class='nick'>{{nick}}</span></div>{{! wrapped for delegation}}
