--- a/js/src/ui/Handlebars/templates/topicBar.hbs
+++ b/js/src/ui/Handlebars/templates/topicBar.hbs
@@ -1,4 +1,4 @@
-<div class='topic tab-invisible qui colourline'>
+<div class='topic qui colourline'>
     {{#if topic}}
         {{> topicText}}
     {{else}}&nbsp;
