--- a/js/src/ui/Handlebars/templates/topicText.hbs
+++ b/js/src/ui/Handlebars/templates/topicText.hbs
@@ -1,1 +1,1 @@
-<span class='{{#if empty}}emptytopic{{/if}}'>{{topic}}</span>
+<span class='{{#if empty}}emptytopic{{/if}}'>[<span>{{topic}}</span>]</span>
