--- a/js/src/ui/Handlebars/templates/userlink.hbs
+++ b/js/src/ui/Handlebars/templates/userlink.hbs
@@ -1,1 +1,1 @@
-<span class='hyperlink-whois' data-user='{{userid}}'>&lt;{{username}}&gt;</span>
+<span class='hyperlink-whois' data-user='{{userid}}'>{{username}}</span>
