--- a/js/src/ui/Handlebars/templates/window.hbs
+++ b/js/src/ui/Handlebars/templates/window.hbs
@@ -1,19 +1,16 @@
-<div class="window qui ircwindow channel hidden">
-
-{{> topicBar}}
-
-<div class="qui content">
-    <div class="qui leftpanel lines">
-    <div class="ui-icon ui-icon-grip-solid-vertical handle vertical"></div>
-    <div class="qui rightpanel nicklist"></div>
-</div>
-
-<div class="qui properties">
-    {{> channelName}}
-</div>
-
-<div class="qui bottompanel">
-    {{> ircInput}}
-</div>
-
+<div class="window qui hidden" data-id="{{id}}" data-name="{{name}}">
+    {{#if isChannel}}{{> topicBar}}{{/if}}
+    <div class="qui content">
+        <div class="qui leftpanel lines"></div>
+        {{#if isChannel}}
+            {{> verticalDivider}}
+            <div class="qui rightpanel"></div>
+        {{/if}}
+    </div>
+    <div class="qui properties">
+        {{> channelName}}
+    </div>
+    <div class="qui bottompanel">
+        {{! {{> ircInput}}
+    </div>
 </div>
