--- a/js/src/ui/Handlebars/templates/ircInput.hbs
+++ b/js/src/ui/Handlebars/templates/ircInput.hbs
@@ -1,4 +1,4 @@
-<form class='input'>
+<div class='input'>
     <div class='input-group'>
         <span class='input-group-addon nickname'><span class='status {{status}}'></span>{{nick}}</span>
         <input class='{{type}} input-field form-control' type='text'>
@@ -12,4 +12,4 @@
             <li><a href='#'>Actions</a></li>
         </ul>
     </div>
-</form>
+</div>
