--- a/js/src/ui/Handlebars/templates/window.hbs
+++ b/js/src/ui/Handlebars/templates/window.hbs
@@ -1,4 +1,4 @@
-<div class="window qui hidden" data-id="{{id}}" data-name="{{name}}">
+<div class="window qui" data-id="{{id}}" data-name="{{name}}">
     {{#if isChannel}}{{> topicBar}}{{/if}}
     <div class="qui content">
         <div class="qui leftpanel lines"></div>
