--- a/js/src/ui/Handlebars/templates/menuitem.hbs
+++ b/js/src/ui/Handlebars/templates/menuitem.hbs
@@ -1,6 +1,6 @@
 <a{{#if value}} data-value='{{value}}'{{/if}}>
-    <span>{{text}}</span>
-    {{#if hint}}
-    <span class='hint'>{{hint}}</span>
-    {{/if}}
+    <li>
+        <span>{{text}}</span>
+        {{#if hint}}<span class='hint'>{{hint}}</span>{{/if}}
+    </li>
 </a>
