--- a/js/src/ui/Handlebars/templates/options.hbs
+++ b/js/src/ui/Handlebars/templates/options.hbs
@@ -6,7 +6,7 @@
         <li class="alert-options"><a href="#">Notifications</a></li>
         <li class="hotkeys disabled"><a href="#">Hot Keys(TODO)</a></li>
     </ul>
-    <div class="tab-content" id="my-tab-content">
+    <div class="tab-content">
         <div class="ui-options control-group well active">
             <div class="controls">
                 <label class="checkbox" for="auto_open_pm">
