--- a/js/src/ui/Handlebars/templates/window.hbs
+++ b/js/src/ui/Handlebars/templates/window.hbs
@@ -11,6 +11,6 @@
         {{> channelName}}
     </div>
     <div class="qui bottompanel">
-        {{! {{> ircInput}}
+        {{#if needsInput}}{{> ircInput}}{{/if}}
     </div>
 </div>
