--- a/js/src/ui/Handlebars/templates/ircInput.hbs
+++ b/js/src/ui/Handlebars/templates/ircInput.hbs
@@ -1,15 +1,11 @@
 <div class='input'>
-    <div class='input-group'>
+    <div class='tt-ahead input-group'>
         <span class='input-group-addon nickname'><span class='status {{status}}'></span>{{nick}}</span>
-        <input class='{{type}} input-field form-control' type='text'>
+        {{!autocompleter}}
+        <input class='tt-hint' type='text' autocomplete='off' spellcheck='off' disabled>
+        <input class='tt-query input-field form-control' type='text' autocomplete='off' spellcheck='off'>
         <span class='input-group-btn'>
             <button class='btn btn-default send' type='button'>&gt;</button>
         </span>
-        <ul class='dropdown-menu'>
-            <li><a href='#'>Colours</a></li>
-            <li><a href='#'>Styles</a></li>
-            <li><a href='#'>IRC Commands</a></li>
-            <li><a href='#'>Actions</a></li>
-        </ul>
     </div>
 </div>
