--- a/js/src/ui/Handlebars/templates/ircTab.hbs
+++ b/js/src/ui/Handlebars/templates/ircTab.hbs
@@ -1,1 +1,1 @@
-<a href='#' class='tab'>{{{name}}}&nbsp;{{> tabDetach}}</a>
+<span class='tab'>{{{name}}}&nbsp;{{> tabDetach}}{{#if closable}}{{> tabClose}}{{/if}}</span>
