UI hotkey updates
bunch of demo code changes too

--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -86,7 +86,7 @@
                     <input type="number" id="dn_duration" value="{{dn_duration}}">ms
                 </label>
                 <input type="button" value="Test" id="notice-test">
-                <a href="http://caniuse.com/notifications">Notification Support</a>
+                <a href="http://caniuse.com/notifications" target="_blank">Notification Support</a>
             </div>
             <div id="standard-notices">
                 <div class="controls">
