--- a/templates/amd/welcome-pane.hbs
+++ b/templates/amd/welcome-pane.hbs
@@ -5,7 +5,7 @@
     {{#if Browser.Features.notifications}}
         Before you login please enable desktop notifications <a class="enable-notifications btn btn-danger btn-small" href="#">Enable notifications</a>
     {{else}}
-        Your browser does not support desktop notifications. Consider downloading
+        Your browser does not support desktop notifications. Consider installing
         {{#if Browser.ie}} <a href="http://www.google.com/chromeframe/?prefersystemlevel=true">Chrome frame for Internet Explorer</a>
         {{else}}
         {{#if Browser.firefox}} <a href="https://addons.mozilla.org/en-US/firefox/addon/tab-notifier/">the Firefox Tab-notifier extension</a>
