Reworked ui inheritance and added router
Added a router (see http://epitome-mvc.github.io/Epitome/#eptiomerouter)
to make use of URIs between windows. Made some changes where I fit -
still need to update templates on IRC windows to point to the new custom
window links. By default links are prefixed by an '!'
Reworked the ui inheritance to use less extending and more implementing.
See js/src/ui and js/src/ui/interfaces to see what I mean.
Moved the tabbar to a module
Updated/concatenated various templates

--- a/templates/detachedWindow.hbs
+++ b/templates/detachedWindow.hbs
@@ -4,4 +4,6 @@
         {{#unless base}}{{> tabClose}}{{/unless}}
         {{> tabAttach}}
     </div>
+    <div class="content"></div>
+    <div><span class="resize-handle ui-icon ui-icon-grip-diagonal-se"></span></div>
 </div>
