--- a/templates/topicText.hbs
+++ b/templates/topicText.hbs
@@ -1,1 +1,1 @@
-<span class='{{#if empty}}emptytopic{{/if}}'>[<span>{{topic}}</span>]</span>
+<span class='{{#if empty}}emptytopic{{/if}}' title="{{topic}}">[<span>{{topic}}</span>]</span>
