--- a/css/modifiablecss.hbs
+++ b/css/modifiablecss.hbs
@@ -103,7 +103,7 @@
 .qui .tabbar {
     color: {{$css 'tabbar_text' '000000' 'c'}};
     display: inline-block;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
     margin-left: 10px;
     font-size: 13px;
     height: 22px;
