Mainly fixes for ie8,9 bugs
-Fixed Elements.from
https://github.com/mootools/mootools-more/issues/1211
-Fixed a bug where ie8,9 rendered the normal style key (/x00) as null
character making the rest of the string invisible. (Just replacing /x00
with "")
-Fixed some bad literal declarations
-Fixed a bug with the Urlifier being over aggressive with escaping
-Fixed an issue with document.head/body needing to be wrapped in
document.id in old ie

Also some inheritance changes:
-Merged BaseCommandsParser and Commands
-Fixed some bugs with the standard ui inheritance
-Began seperating baseircclient and ircclient

--- a/css/modifiablecss.hbs
+++ b/css/modifiablecss.hbs
@@ -97,7 +97,10 @@
     height: 26px;
     line-height: 20px;
     padding: 2px 0;
-    vertical-align: middle;
+}
+
+.qui .outertabbar > * {
+    vertical-align: top;
 }
 
 .qui .tabbar {
