--- a/panes/options.hbs
+++ b/panes/options.hbs
@@ -33,6 +33,12 @@
                 </label>
             </div>
             <div class="controls">
+                <label class="checkbox" for="show_nicklist">
+                    {{lang.SHOW_NICKLIST}}
+                    <input type="checkbox" id="show_nicklist" {{check show_nicklist}}>
+                </label>
+            </div>
+            <div class="controls">
                 <label class="checkbox" for="lastpos_line">
                     {{lang.LASTPOS_LINE}}
                     <input type="checkbox" id="lastpos_line" {{check lastpos_line}}>
