--- a/templates/mainmenu.hbs
+++ b/templates/mainmenu.hbs
@@ -1,10 +1,10 @@
 <div class="hidden">
     <ul class="main-menu dropdownmenu">
-        <a href="#options"><li><span>Options</span></li></a>
-        <a href="#embedded"><li><span>Add webchat to your site</span></li></a>
-        <a href="#privacy"><li><span>Privacy policy</span></li></a>
-        <a href="#faq"><li><span>Frequently asked questions</span></li></a>
-        <a href="#feedback"><li><span>Submit feedback</span></li></a>
-        <a href="#about"><li><span>About qwebirc</span></li></a>
+        <a href="#!options"><li><span>Options</span></li></a>
+        <a href="#!embedded"><li><span>Add webchat to your site</span></li></a>
+        <a href="#!privacy"><li><span>Privacy policy</span></li></a>
+        <a href="#!faq"><li><span>Frequently asked questions</span></li></a>
+        <a href="#!feedback"><li><span>Submit feedback</span></li></a>
+        <a href="#!about"><li><span>About qwebirc</span></li></a>
     </ul>
 </div>
