--- a/templates/userlink.hbs
+++ b/templates/userlink.hbs
@@ -1,1 +1,1 @@
-<span class='hyperlink-whois' data-user='{{userid}}'>{{username}}</span>
+<span class='hyperlink-whois' data-user='{{{userid}}}'>{{{username}}}</span>
