Fixed a double posting bug and twisted demo

--- a/demo/twisted/static/css/qwebirc.css
+++ b/demo/twisted/static/css/qwebirc.css
@@ -47,7 +47,7 @@ html, body {
 }
 
 /*otherwise 100%*/
-.channel .leftpanel {
+.show-nicklist .leftpanel {
     position: absolute;
     left: 0;
     right: 141px;
@@ -144,6 +144,15 @@ html, body {
     right: 0;
     z-index: 10;
 }
+
+.show-nicklist .content .handle {
+    display: block;
+}
+
+.content .handle {
+    display: none;
+}
+
 
 /*Highlighting*/
 
